<resources>
    <string name="app_name">MyAppWithMaps</string>
    <string name="access_to_geolocation">Access to geolocation</string>
    <string name="the_permission_is_needed_to">The permission is needed to automatically determine your location and display it on the map.</string>
    <string name="provide">Provide</string>
    <string name="cancel">Cancel</string>
    <string name="access_to_geolocation_is_denied">Access to geolocation is denied.</string>
    <string name="geolocation_is_disabled">Geolocation is disabled. Enable it in the app settings.</string>
    <string name="settings">Settings</string>
    <string name="the_name_of_the_point">The name of the point</string>
    <string name="description_of_the_point_and_its_features">Description of the point and its features</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="list_of_points">List of points</string>
    <string name="editing_the_point">Editing the point</string>
    <string name="map">Map</string>
    <string name="new_point">New point</string>
    <string name="save">Save</string>
    <string name="the_title_cannot_be_empty">The title cannot be empty.</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
</resources>